[package]
name = "vst3-host"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
block-core = { path = "../block-core" }
vst3 = "0.3.0"
libloading = "0.8"
crossbeam-queue = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[dev-dependencies]
domain = { path = "../domain" }
