[package]
name = "lv2_catalog_import"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "lv2_catalog_import"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
oxttl = "0.1"
oxrdf = "0.2"
walkdir = "2"
clap = { version = "4", features = ["derive"] }
heck = "0.5"
